ContactListFilterView v0.2